# mlops_practice

./: .coveragerc  .env.template  .gitignore  .ruff.toml  CODEOWNERS  README.md  mypy.ini  poe_tasks.toml  pyproject.toml
.github/workflows/: common_release_stage_prod.yml  common_workflow_dev.yml  publish_library.yml  techdocs_sync.yml
databricks_resources/: bundle.yml  cluster_configs.yml  cluster_init.sh  platform_variables.yml  project_variables.yml  tasks.yml  workflow.yml
docker/: build_and_push.sh  house_price.dockerfile
gcp_demo/: __init__.py  estimators.py
gcp_demo/tasks/: batch_prediction.py  inference.py  train.py
pipeline/: config.py  house_price_pipeline.py
